@@ -1,0 +1,2 @@
+	.data
+	OCTA #42
