@@ -1,8 +1,8 @@
 #source: sec-1.s
 #source: start.s
 #source: data1.s
-#ld: -m mmo
-#objdump: -sh
+#ld: -m mmo -u __etext -u __Sdata -u __Edata -u __Sbss -u __Ebss -u __Eall
+#objdump: -sht
 
 .*:     file format mmo
 
@@ -20,6 +20,17 @@ Idx Name          Size      VMA               LMA               File off  Algn
                   CONTENTS, ALLOC, LOAD, DATA
   5 thirdsec      0+a  0+  0+  0+  2\*\*2
                   CONTENTS, READONLY
+
+SYMBOL TABLE:
+#...
+0+30 g +\*ABS\* __etext
+200000000000001c g +\*ABS\* __Ebss
+200000000000001b g +\*ABS\* __Edata
+#...
+200000000000001c g +\*ABS\* __Eall
+20+ g +\.data __Sdata
+200000000000001c g +\*ABS\* __Sbss
+
 Contents of section \.text:
  0000 e3fd0001                             .*
 Contents of section secname:
