@@ -1,0 +1,3 @@
+        .section        .tm_clone_table,"aw",@nobits
+	.global __TMC_END__
+__TMC_END__     IS @
