@@ -1,0 +1,3 @@
+        .section        .tm_clone_table,"aw",@progbits
+	TETRA 1234,5678
+	TETRA 9101112,13141516
