@@ -1,0 +1,3 @@
+	.text
+f:
+        LDA $252,__TMC_END__+7
